--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -55,6 +55,7 @@
                 <li>Ejecutar acción "Crear remesa de actividad"</li>
                 <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_members_manager/activityremittance/">"Remesas de actividad"</a></li>
             </ul>
+            <h1>Cambiar el estado de los recibos</h1>
         </div>
     </div>
 {% endblock %}
