--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -56,6 +56,11 @@
                 <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_members_manager/activityremittance/">"Remesas de actividad"</a></li>
             </ul>
             <h1>Cambiar el estado de los recibos</h1>
+            <ul>
+                <li>Abrir la sección <a href="/admin/ampa_members_manager/activityreceipt/">"Recibos de actividad"</a> o <a href="/admin/ampa_members_manager/membershipreceipt/">"Recibos de socios"</a></li>
+                <li>Aplicar los filtros necesarios y seleccionar los recibos a actualizar</li>
+                <li>Ejecutar acción "Marcar como envíado/pagado"</li>
+            </ul>
         </div>
     </div>
 {% endblock %}
