--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -7,6 +7,7 @@
             <ul>
                 <li>Confirmar que la familia no exista usando los <a href="/admin/ampa_members_manager/family/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_members_manager/family/add/">Completar datos familia</a></li>
+                <li>Opcional: crear un padre/madre si no existe</li>
                 <li>Clic en "Agregar hijo adicional" y completar datos</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
@@ -20,8 +21,7 @@
             <h1>Alta de hijo/a</h1>
             <ul>
                 <li>Confirmar que el hijo/a no exista usando los <a href="/admin/ampa_members_manager/child/">filtros y la búsqueda</a></li>
-                <li><a href="/admin/ampa_members_manager/child/add/">Completar datos tutor</a></li>
-                <li>Opcional: clic en "Agregar cuenta bancaria adicional" y completar datos</li>
+                <li><a href="/admin/ampa_members_manager/child/add/">Completar datos</a></li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
             <h1>Nueva actividad</h1>
@@ -57,7 +57,11 @@
             </ul>
             <h1>Cambiar el estado de los recibos</h1>
             <ul>
-                <li>Abrir la sección <a href="/admin/ampa_members_manager/activityreceipt/">"Recibos de actividad"</a> o <a href="/admin/ampa_members_manager/membershipreceipt/">"Recibos de socios"</a></li>
+                <li>Abrir la sección de recibos</li>
+                <ul>
+                    <li><a href="/admin/ampa_members_manager/activityreceipt/">"Recibos de actividad"</a></li>
+                    <li><a href="/admin/ampa_members_manager/membershipreceipt/">"Recibos de socios"</a></li>
+                </ul>
                 <li>Aplicar los filtros necesarios y seleccionar los recibos a actualizar</li>
                 <li>Ejecutar acción "Marcar como envíado/pagado"</li>
             </ul>
