--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -11,7 +11,7 @@
                 <li>Clic en "Agregar hijo adicional" y completar datos</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
-            <h1>Alta de tutor</h1>
+            <h1>Alta de padre/madre</h1>
             <ul>
                 <li>Confirmar que el tutor no exista usando los <a href="/admin/ampa_members_manager/parent/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_members_manager/parent/add/">Completar datos tutor</a></li>
@@ -24,7 +24,7 @@
                 <li><a href="/admin/ampa_members_manager/child/add/">Completar datos</a></li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
-            <h1>Nueva actividad</h1>
+            <h1>Alta de actividad</h1>
             <ul>
                 <li>Confirmar que la actividad no exista usando los <a href="/admin/ampa_members_manager/activity/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_members_manager/activity/add/">Completar datos actividad</a></li>
