--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -5,35 +5,47 @@
         <div class="module" id="recent-actions-module">
             <h1>Alta de familia</h1>
             <ul>
-                <li>Confirmar que la familia no exista usando los <a href="/admin/ampa_members_manager/family/">filtros y la búsqueda</a></li>
-                <li><a href="/admin/ampa_members_manager/family/add/">Completar datos familia</a></li>
+                <li>Confirma que la familia no exista usando los <a href="/admin/ampa_members_manager/family/">filtros y la búsqueda</a></li>
+                <li><a href="/admin/ampa_members_manager/family/add/">Completa los datos de la familia</a></li>
                 <li>Opcional: crear un padre/madre si no existe</li>
-                <li>Clic en "Agregar hijo adicional" y completar datos</li>
+                <li>Clic en "Agregar hijo adicional" y completa los datos</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
             <h1>Alta de padre/madre</h1>
             <ul>
-                <li>Confirmar que el tutor no exista usando los <a href="/admin/ampa_members_manager/parent/">filtros y la búsqueda</a></li>
-                <li><a href="/admin/ampa_members_manager/parent/add/">Completar datos tutor</a></li>
-                <li>Opcional: clic en "Agregar cuenta bancaria adicional" y completar datos</li>
+                <li>Confirma que el tutor no exista usando los <a href="/admin/ampa_members_manager/parent/">filtros y la búsqueda</a></li>
+                <li><a href="/admin/ampa_members_manager/parent/add/">Completa los datos dek tutor</a></li>
+                <li>Opcional: clic en "Agregar cuenta bancaria adicional" y completa los datos</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
             <h1>Alta de hijo/a</h1>
             <ul>
-                <li>Confirmar que el hijo/a no exista usando los <a href="/admin/ampa_members_manager/child/">filtros y la búsqueda</a></li>
-                <li><a href="/admin/ampa_members_manager/child/add/">Completar datos</a></li>
+                <li>Confirma que el hijo/a no exista usando los <a href="/admin/ampa_members_manager/child/">filtros y la búsqueda</a></li>
+                <li><a href="/admin/ampa_members_manager/child/add/">Completa los datos</a></li>
                 <li>Clic en botón GUARDAR</li>
+            </ul>
+            <h1>Convertir familias en socias</h1>
+            <ul>
+                <li>Abre la sección <a href="/admin/ampa_members_manager/family/">"Familias"</a></li>
+                <li>Usa los filtros y búsqueda para localizar las familias</li>
+                <li>Selecciona las familias: </li>
+                <ul>
+                    <li>Marca el check de una fila para seleccionarla</li>
+                    <li>Marca el check de la fila de títulos para seleccionar todas las familias de la página actual</li>
+                    <li>Marca el check anterior 🡹 y después click en "Seleccionar todas las XX familias" para seleccionar todas las familias que cumplen el filtro actual (de todas las páginas)</li>
+                </ul>
+                <li>Ejecutar acción "Convertir las familias en socias"</li>
             </ul>
             <h1>Alta de actividad</h1>
             <ul>
-                <li>Confirmar que la actividad no exista usando los <a href="/admin/ampa_members_manager/activity/">filtros y la búsqueda</a></li>
-                <li><a href="/admin/ampa_members_manager/activity/add/">Completar datos actividad</a></li>
+                <li>Confirma que la actividad no exista usando los <a href="/admin/ampa_members_manager/activity/">filtros y la búsqueda</a></li>
+                <li><a href="/admin/ampa_members_manager/activity/add/">Completa los datos de la actividad</a></li>
                 <li>Añadir los períodos de actividad necesarios</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
             <h1>Apuntar a actividad</h1>
             <ul>
-                <li>Confirmar que el alumno no esté ya apuntado usando los <a href="/admin/ampa_members_manager/activityregistration/">filtros y la búsqueda</a></li>
+                <li>Confirma que el alumno no esté ya apuntado usando los <a href="/admin/ampa_members_manager/activityregistration/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_members_manager/activityregistration/add/">Apuntar a la actividad</a></li>
                 <ul>
                     <li>Al desplegar lista de cuentas, pulsar inicial del titular para localizar cuenta</li>
@@ -43,21 +55,21 @@
             </ul>
             <h1>Generar remesa de socios</h1>
             <ul>
-                <li>Abrir la sección <a href="/admin/ampa_members_manager/family/">"Familias"</a></li>
-                <li>Seleccionar todas las familias</li>
+                <li>Abre la sección <a href="/admin/ampa_members_manager/family/">"Familias"</a></li>
+                <li>Selecciona todas las familias</li>
                 <li>Ejecutar acción "Generar la remesa de socios del año activo"</li>
                 <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_members_manager/membershipremittance/">"Remesas de socios"</a></li>
             </ul>
             <h1>Generar remesa de actividad</h1>
             <ul>
-                <li>Abrir la sección <a href="/admin/ampa_members_manager/activityperiod/">"Períodos de actividad"</a></li>
-                <li>Seleccionar los períodos de actividad requeridos</li>
+                <li>Abre la sección <a href="/admin/ampa_members_manager/activityperiod/">"Períodos de actividad"</a></li>
+                <li>Selecciona los períodos de actividad requeridos</li>
                 <li>Ejecutar acción "Crear remesa de actividad"</li>
                 <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_members_manager/activityremittance/">"Remesas de actividad"</a></li>
             </ul>
             <h1>Cambiar el estado de los recibos</h1>
             <ul>
-                <li>Abrir la sección de recibos</li>
+                <li>Abre la sección de recibos</li>
                 <ul>
                     <li><a href="/admin/ampa_members_manager/activityreceipt/">"Recibos de actividad"</a></li>
                     <li><a href="/admin/ampa_members_manager/membershipreceipt/">"Recibos de socios"</a></li>
