--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li>Marca el check de una fila para seleccionarla</li>
                     <li>Marca el check de la fila de títulos para seleccionar todas las familias de la página actual</li>
-                    <li>Marca el check anterior 🡹 y después click en "Seleccionar todas las XX familias" para seleccionar todas las familias que cumplen el filtro actual (de todas las páginas)</li>
+                    <li>Marca el check anterior 🡹 y después click en "Seleccionar todas las # familias" para seleccionar todas las familias que cumplen el filtro actual (de todas las páginas)</li>
                 </ul>
                 <li>Ejecutar acción "Convertir las familias en socias"</li>
             </ul>
@@ -76,6 +76,10 @@
                 </ul>
                 <li>Aplicar los filtros necesarios y seleccionar los recibos a actualizar</li>
                 <li>Ejecutar acción "Marcar como envíado/pagado"</li>
+            </ul>
+            <h1>Ver las estadísticas</h1>
+            <ul>
+                <li>Abre la sección <a href="/admin/ampa_members_manager/activecourse/1/change/">"Curso activo"</a></li>
             </ul>
         </div>
     </div>
