--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -3,6 +3,12 @@
 {% block sidebar %}
     <div id="content-related">
         <div class="module" id="recent-actions-module">
+            <h1>Importar datos desde excel</h1>
+            <ul>
+                <li><a href="/ampa/import/members/page/">Miembros</a></li>
+                <li><a href="/ampa/import/afterschools/page/">Extraescolares</a></li>
+                <li><a href="/ampa/import/custody/page/">Ludoteca</a></li>
+            </ul>
             <h1>Alta de familia</h1>
             <ul>
                 <li>Confirma que la familia no exista usando los <a href="/admin/ampa_manager/family/">filtros y la búsqueda</a></li>
