--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -5,9 +5,9 @@
         <div class="module" id="recent-actions-module">
             <h1>Importar datos desde excel</h1>
             <ul>
-                <li><a href="/ampa/import/members/page/">Miembros</a></li>
-                <li><a href="/ampa/import/afterschools/page/">Extraescolares</a></li>
-                <li><a href="/ampa/import/custody/page/">Ludoteca</a></li>
+                <li><a href="/ampa/import/members/">Miembros</a></li>
+                <li><a href="/ampa/import/afterschools/">Extraescolares</a></li>
+                <li><a href="/ampa/import/custody/">Ludoteca</a></li>
             </ul>
             <h1>Alta de familia</h1>
             <ul>
