--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_members.html
@@ -1,14 +1,54 @@
 {% extends 'admin/base_site.html' %}
 {% load i18n %}
 
+{% block title %}{% trans 'Import members' %}{% endblock %}
+
 {% block breadcrumbs %}
-<div class="breadcrumbs">
-  <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-  &rsaquo;  <a href="{% url 'admin:app_list' 'ampa_manager' %}">{% trans 'Ampa_Manager' %}</a>
-  &rsaquo; {% trans 'Import members' %}</a>
-</div>
+    <div class="breadcrumbs">
+      <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+      &rsaquo;  <a href="{% url 'admin:app_list' 'ampa_manager' %}">{% trans 'AMPA Manager' %}</a>
+      &rsaquo; {% trans 'Import members' %}
+    </div>
 {% endblock %}
 
 {% block content %}
-IMPORT MEMBERS
+    <h1>{% trans 'Import members' %}</h1>
+
+    <h2>{% trans 'Upload file' %}</h2>
+    <form action="/ampa/import/members/" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="{% trans 'Import file' %}">
+    </form>
+
+    <table style="width: 100%;">
+        <tr>
+            <td style="width: 35%;">
+
+                    <h2>{% trans 'Instructions' %}</h2>
+                    <ul>
+                        <li>{% trans 'The file extension must be XLS (not XLSX)' %}.</li>
+                        <li>{% trans 'Only the first sheet of the excel will be imported' %}.</li>
+                        <li>{% trans 'The rows imported will be from row 2 onwards (a header row is expected)' %}.</li>
+                        <li>{% trans 'The columns must be in the following order' %}:
+                            <ul>
+                            {% for column in excel_columns %}
+                                <li>{% trans 'Column' %} {{ column.0 }}:  {{ column.1 }}</li>
+                            {% endfor %}
+                            </ul>
+                        </li>
+                    </ul>
+            </td>
+            <td style="width: 65%;">
+                <h2>{% trans 'Results' %}</h2>
+                {% if import_log %}
+                    <p>{% trans 'A file with the following contents has been saved in the project directory' %}.</p>
+                    <p>{{ import_log|linebreaks }}</p>
+                {% else %}
+                    <p>{% trans 'Choose an excel file and click "Import file" to see here the results of the import' %}.</p>
+                {% endif %}
+            </td>
+        </tr>
+    </table>
+
 {% endblock %}
