--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importer.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importer.html
@@ -1,20 +1,20 @@
 {% extends 'admin/base_site.html' %}
 {% load i18n %}
 
-{% block title %}{% trans 'Import members' %}{% endblock %}
+{% block title %}{{ importer_title }}{% endblock %}
 
 {% block breadcrumbs %}
     <div class="breadcrumbs">
       <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-      &rsaquo; {% trans 'Import members' %}
+      &rsaquo; {{ importer_title }}
     </div>
 {% endblock %}
 
 {% block content %}
-    <h1>{% trans 'Import members' %}</h1>
+    <h1>{{ importer_title }}</h1>
 
     <h2>{% trans 'Upload file' %}</h2>
-    <form action="/ampa/import/members/" enctype="multipart/form-data" method="post">
+    <form action="{{ form_action }}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="{% trans 'Import file' %}">
@@ -29,6 +29,7 @@
                         <li>{% trans 'The file extension must be XLS (not XLSX)' %}.</li>
                         <li>{% trans 'Only the first sheet of the excel will be imported' %}.</li>
                         <li>{% trans 'The rows imported will be from row 2 onwards (a header row is expected)' %}.</li>
+                        <li>{% trans 'If there is no data for any column leave it empty' %}.</li>
                         <li>{% trans 'The columns must be in the following order' %}:
                             <ul>
                             {% for column in excel_columns %}
@@ -41,7 +42,7 @@
             <td style="width: 65%;">
                 <h2>{% trans 'Results' %}</h2>
                 {% if import_log %}
-                    <p>{% trans 'A file with the following contents has been saved in the project directory' %}.</p>
+                    <p>{% trans 'A file with the following contents has been saved in the project directory' %}. </p>
                     <p>{{ import_log|linebreaks }}</p>
                 {% else %}
                     <p>{% trans 'Choose an excel file and click "Import file" to see here the results of the import' %}.</p>
