check if families are members

--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -6,11 +6,12 @@
         <div class="module" id="recent-actions-module">
             <h1><img src="{% static 'xls.png' %}" width="24px"> Importar datos de excel</h1>
             <ul>
-                <li><a href="/ampa/import/members/">Miembros</a></li>
-                <li><a href="/ampa/import/afterschools/">Extraescolares</a></li>
-                <li><a href="/ampa/import/custody/">Ludoteca</a></li>
+                <li><a href="/ampa/members/import/">Miembros</a></li>
+                <li><a href="/ampa/afterschools/import/">Extraescolares</a></li>
+                <li><a href="/ampa/custody/import/">Ludoteca</a></li>
             </ul>
-            <h1>Alta de familia</h1>
+            <h1><img src="{% static 'member.png' %}" width="24px"> <a href="/ampa/members/check/">Consultar quien es socio</a></h1>
+            <h1><img src="{% static 'family.png' %}" width="24px"> Alta de familia</h1>
             <ul>
                 <li>Confirma que la familia no exista usando los <a href="/admin/ampa_manager/family/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_manager/family/add/">Completa los datos de la familia</a></li>
@@ -18,20 +19,20 @@
                 <li>Clic en "Agregar hijo adicional" y completa los datos</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
-            <h1>Alta de padre/madre</h1>
+            <h1><img src="{% static 'parent.png' %}" width="24px"> Alta de padre/madre</h1>
             <ul>
                 <li>Confirma que el tutor no exista usando los <a href="/admin/ampa_manager/parent/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_manager/parent/add/">Completa los datos dek tutor</a></li>
                 <li>Opcional: clic en "Agregar cuenta bancaria adicional" y completa los datos</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
-            <h1>Alta de hijo/a</h1>
+            <h1><img src="{% static 'child.png' %}" width="24px"> Alta de hijo/a</h1>
             <ul>
                 <li>Confirma que el hijo/a no exista usando los <a href="/admin/ampa_manager/child/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_manager/child/add/">Completa los datos</a></li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
-            <h1>Convertir familias en socias</h1>
+            <h1><img src="{% static 'member.png' %}" width="24px"> Convertir familias en socias</h1>
             <ul>
                 <li>Abre la sección <a href="/admin/ampa_manager/family/">"Familias"</a></li>
                 <li>Usa los filtros y búsqueda para localizar las familias</li>
@@ -43,14 +44,14 @@
                 </ul>
                 <li>Ejecutar acción "Convertir las familias en socias"</li>
             </ul>
-            <h1>Alta de actividad</h1>
+            <h1><img src="{% static 'activity.png' %}" width="24px"> Alta de actividad</h1>
             <ul>
                 <li>Confirma que la actividad no exista usando los <a href="/admin/ampa_manager/activity/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_manager/activity/add/">Completa los datos de la actividad</a></li>
                 <li>Añadir los períodos de actividad necesarios</li>
                 <li>Clic en botón GUARDAR</li>
             </ul>
-            <h1>Apuntar a actividad</h1>
+            <h1><img src="{% static 'add-user.png' %}" width="24px"> Apuntar a actividad</h1>
             <ul>
                 <li>Confirma que el alumno no esté ya apuntado usando los <a href="/admin/ampa_manager/activityregistration/">filtros y la búsqueda</a></li>
                 <li><a href="/admin/ampa_manager/activityregistration/add/">Apuntar a la actividad</a></li>
@@ -60,21 +61,21 @@
                     <li>Clic en botón GUARDAR</li>
                 </ul>
             </ul>
-            <h1>Generar remesa de socios</h1>
+            <h1><img src="{% static 'money.png' %}" width="24px"> Generar remesa de socios</h1>
             <ul>
                 <li>Abre la sección <a href="/admin/ampa_manager/family/">"Familias"</a></li>
                 <li>Selecciona todas las familias</li>
                 <li>Ejecutar acción "Generar la remesa de socios del año activo"</li>
                 <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_manager/membershipremittance/">"Remesas de socios"</a></li>
             </ul>
-            <h1>Generar remesa de actividad</h1>
+            <h1><img src="{% static 'money.png' %}" width="24px"> Generar remesa de actividad</h1>
             <ul>
                 <li>Abre la sección <a href="/admin/ampa_manager/activityperiod/">"Períodos de actividad"</a></li>
                 <li>Selecciona los períodos de actividad requeridos</li>
                 <li>Ejecutar acción "Crear remesa de actividad"</li>
                 <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_manager/activityremittance/">"Remesas de actividad"</a></li>
             </ul>
-            <h1>Cambiar el estado de los recibos</h1>
+            <h1><img src="{% static 'receipt.png' %}" width="24px"> Cambiar el estado de los recibos</h1>
             <ul>
                 <li>Abre la sección de recibos</li>
                 <ul>
@@ -84,7 +85,7 @@
                 <li>Aplicar los filtros necesarios y seleccionar los recibos a actualizar</li>
                 <li>Ejecutar acción "Marcar como envíado/pagado"</li>
             </ul>
-            <h1>Ver las estadísticas</h1>
+            <h1><img src="{% static 'statistics.png' %}" width="24px"> Ver las estadísticas</h1>
             <ul>
                 <li>Abre la sección <a href="/admin/ampa_manager/activecourse/1/change/">"Curso activo"</a></li>
             </ul>
