--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/check_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/check_members.html
@@ -28,11 +28,10 @@
                 <li><a href="{% static excel_template_file_name %}">{% trans 'Click here to download a template' %}</a></li>
                 <li>{% trans 'The uploaded Excel needs the following format in the first sheet' %}.
                     <ul>
-                        <li>{% trans 'The first row is the header' %})</li>
+                        <li>{% trans 'The first row is the header' %}</li>
                         <li>{% trans 'Column' %} A:  {% trans 'Family surnames' %} ({% trans 'Compulsory' %})</li>
                         <li>{% trans 'Column' %} B:  {% trans 'Parent name and surnames' %} ({% trans 'Optional' %})</li>
                         <li>{% trans 'Column' %} C:  {% trans 'Other parent name and surnames' %} ({% trans 'Optional' %})</li>
-                        <li>{% trans 'Column' %} D:  {% trans 'Children names. Without surnames. Separated by commas' %} ({% trans 'Optional' %})</li>
                     </ul>
                 </li>
             </ul>
