--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_after_schools_registrations.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_after_schools_registrations.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base_site.html' %}
+{% load custom_filters %}
 {% load i18n %}
 {% load static %}
 
@@ -43,9 +44,16 @@
             </td>
             <td style="width: 65%;">
                 <h2>{% trans 'Results' %}</h2>
-                {% if import_log %}
-                    <p>{% trans 'A file with the following contents has been saved in the project directory' %}. </p>
-                    <p>{{ import_log|linebreaks }}</p>
+                {% if import_summary %}
+                    {% if success %}
+                    <img src="{% static 'images/success.png' %}" width="48px">
+                    {% else %}
+                    <img src="{% static 'images/warning.png' %}" width="48px">
+                    {% endif %}
+
+                    <p>{{ import_summary|titled_list_to_ul }}</p>
+
+                    <p>{{ import_results|titled_list_to_ul }}</p>
                 {% else %}
                     <p>{% trans 'Choose an excel file and click "Import file" to see here the results of the import' %}.</p>
                 {% endif %}
