--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -4,6 +4,7 @@
 {% block sidebar %}
     <div id="content-related">
         <div class="module" id="recent-actions-module">
+            <h1><img src="{% static 'images/checklist.png' %}" width="24px"> <a href="/ampa/validations/family/">Validar datos de familias</a></h1>
             <h1><img src="{% static 'images/xls.png' %}" width="24px"> Importar datos de excel</h1>
             <ul>
                 <li><a href="/ampa/members/import/">Miembros</a></li>
