--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/validate_families_data.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/validate_families_data.html
@@ -5,6 +5,24 @@
 
 {% block title %}{% trans 'Validate families data' %}{% endblock %}
 
+{% block extrahead %}
+    <style>
+        #miDiv {
+            display: none;
+        }
+    </style>
+    <script>
+        function showHideSection(sectionId) {
+            var section = document.getElementById(sectionId);
+            if (section.style.display === "none") {
+                section.style.display = "block";
+            } else {
+                section.style.display = "none";
+            }
+        }
+    </script>
+{% endblock %}
+
 {% block breadcrumbs %}
     <div class="breadcrumbs">
       <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
@@ -14,9 +32,9 @@
 
 {% block content %}
     <h1>{% trans 'Validate families data' %}</h1>
-    <p>{{ families_with_same_surnames|titled_list_to_ul }}</p>
-    <p>{{ families_with_same_children_names|titled_list_to_ul }}</p>
-    <p>{{ families_without_default_holder|titled_list_to_ul }}</p>
-    <p>{{ families_with_more_than_2_parents|titled_list_to_ul }}</p>
-    <p>{{ families_with_only_1_parent|titled_list_to_ul }}</p>
+    <p>{{ families_with_same_surnames|titled_list_to_ol }}</p>
+    <p>{{ families_with_same_children_names|titled_list_to_ol }}</p>
+    <p>{{ families_without_default_holder|titled_list_to_ol }}</p>
+    <p>{{ families_with_more_than_2_parents|titled_list_to_ol }}</p>
+    <p>{{ families_with_only_1_parent|titled_list_to_ol }}</p>
 {% endblock %}
