--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -15,6 +15,7 @@
                         <li><a href="/ampa/afterschools-registrations/import/">Inscripciones</a></li>
                     </ul>
                 </li>
+                <li><a href="/ampa/camps/import/">Campamentos</a></li>
             </ul>
             <h1><img src="{% static 'images/member.png' %}" width="24px"> <a href="/ampa/members/check/">Consultar socios subiendo un excel</a></h1>
             <h1><img src="{% static 'images/family.png' %}" width="24px"> Alta de familia</h1>
