--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -7,8 +7,8 @@
             <h1><img src="{% static 'images/checklist.png' %}" width="24px"> <a href="/ampa/validations/family/">Validar datos de familias</a></h1>
             <h1><img src="{% static 'images/xls.png' %}" width="24px"> Importar datos de excel</h1>
             <ul>
-                <li><a href="/ampa/members/import/">Miembros</a></li>
-                <li><a href="/ampa/custody/import/">Ludoteca</a></li>
+                <li><a href="/ampa/members/import/">Socios</a></li>
+                <li><a href="/ampa/custody/import/">Custodia</a></li>
                 <li>Extraescolares
                     <ul>
                         <li><a href="/ampa/afterschools-activities/import/">Actividades</a></li>
