check family emails

--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -8,6 +8,12 @@
             <h1><img src="{% static 'images/xls.png' %}" width="24px"> Importar datos de excel</h1>
             <ul>
                 <li><a href="/ampa/members/import/">Socios</a></li>
+                <li>Cuenta ikastola
+                    <ul>
+                        <li><a href="/ampa/family-email/import/">Registrar</a></li>
+                        <li><a href="/ampa/family-email/check/">Comprobar</a></li>
+                    </ul>
+                </li>
                 <li><a href="/ampa/custody/import/">Custodia</a></li>
                 <li>Extraescolares
                     <ul>
