--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
@@ -27,6 +27,7 @@
             <td style="width: 35%;">
                     <h2>{% trans 'Instructions' %}</h2>
                     <ul>
+                        <li><a href="/admin/ampa_manager/custodyedition/add/" target="_new">{% trans 'Optional' %}: {% trans 'Create a new custody edition' %}</a></li>
                         <li><a href="{% static excel_template_file_name %}">{% trans 'Click here to download an excel template' %}</a>.</li>
                         <li>{% trans 'The file extension must be XLS (not XLSX)' %}.</li>
                         <li>{% trans 'Only the first sheet of the excel will be imported' %}.</li>
