increase auth max order

--- a/software_components/app_server/ampa_members_manager_project/templates/admin/base_site.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/base_site.html
@@ -37,6 +37,10 @@
                     <th scope="row"><a href="/admin/ampa_manager/holder/">Titulares</a></th>
                 </tr>
 
+                <tr class="model-holder">
+                    <th scope="row"><a href="/admin/ampa_manager/bankbiccode/">Códigos BIC</a></th>
+                </tr>
+
                 </tbody>
             </table>
         </div>
