--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_custody.html
@@ -15,60 +15,94 @@
 {% block content %}
     <h1>{% trans 'Import custody' %}</h1>
 
-    <h2>{% trans 'Upload file' %}</h2>
-    <form action="{{ url 'import_custody' }}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
+    <div id="upload_form">
+        <h2>{% trans 'Upload file' %}</h2>
+        <form action="{{ url 'import_custody' }}" enctype="multipart/form-data" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="{% trans 'Import file' %}">
+        </form>
+    </div>
 
-    {{ form.as_p }}
+    <div id="instructions">
+        <h2>{% trans 'Instructions' %}</h2>
+        <ul>
+            <li><a href="/admin/ampa_manager/custodyedition/add/" target="_new">{% trans 'Optional' %}: {% trans 'Create a new custody edition' %}</a></li>
+            <li><a href="{% static excel_template_file_name %}">{% trans 'Click here to download an excel template' %}</a>.</li>
+            <li>{% trans 'The file extension must be XLS (not XLSX)' %}.</li>
+            <li>{% trans 'Only the first sheet of the excel will be imported' %}.</li>
+            <li>{% trans 'The rows imported will be from row 3 onwards (two header rows are expected)' %}.</li>
+            <li>{% trans 'If there is no data for any column leave it empty' %}.</li>
+            <li>{% trans 'The columns must be in the following order' %}:
+                <ul>
+                {% for column in excel_columns %}
+                    <li>{% trans 'Column' %} {{ column.0 }}:  {{ column.1 }}</li>
+                {% endfor %}
+                </ul>
+            </li>
+        </ul>
+    </div>
 
-    <input type="submit" value="{% trans 'Import file' %}">
-    </form>
+    <div id="results">
+        <h2>{% trans 'Results' %}</h2>
 
-    <table style="width: 100%;">
-        <tr>
-            <td style="width: 35%;">
-                    <h1>{% trans 'Instructions' %}</h1>
-                    <ul>
-                        <li><a href="/admin/ampa_manager/custodyedition/add/" target="_new">{% trans 'Optional' %}: {% trans 'Create a new custody edition' %}</a></li>
-                        <li><a href="{% static excel_template_file_name %}">{% trans 'Click here to download an excel template' %}</a>.</li>
-                        <li>{% trans 'The file extension must be XLS (not XLSX)' %}.</li>
-                        <li>{% trans 'Only the first sheet of the excel will be imported' %}.</li>
-                        <li>{% trans 'The rows imported will be from row 3 onwards (two header rows are expected)' %}.</li>
-                        <li>{% trans 'If there is no data for any column leave it empty' %}.</li>
-                        <li>{% trans 'The columns must be in the following order' %}:
-                            <ul>
-                            {% for column in excel_columns %}
-                                <li>{% trans 'Column' %} {{ column.0 }}:  {{ column.1 }}</li>
-                            {% endfor %}
-                            </ul>
-                        </li>
-                    </ul>
-            </td>
-            <td style="width: 65%;">
-                <h1>{% trans 'Results' %}</h1>
-                {% if simulation %}
-                    <h2 style="background-color: yellow;">{% trans 'Warning: This has been a simulation of the import' %}</h2>
-                    <ul>
-                        <li style="background-color: yellow;">{% trans 'No change has been made' %}</li>
-                        <li style="background-color: yellow;">{% trans 'If the results are ok, import the file again disabling the "SIMULATION" option' %}</li>
-                    </ul>
-                {% endif %}
+        {% if simulation %}
+            <div id="simulation" style="background-color: yellow;">
+                <h2>{% trans 'Warning: This has been a simulation of the import' %}</h2>
+                <ul>
+                    <li>{% trans 'No change has been made' %}</li>
+                    <li>{% trans 'If the results are ok, import the file again disabling the "SIMULATION" option' %}</li>
+                </ul>
+            </div>
+        {% endif %}
 
-                {% if import_summary %}
-                    {% if success %}
-                    <img src="{% static 'images/success.png' %}" width="48px">
-                    {% else %}
-                    <img src="{% static 'images/warning.png' %}" width="48px">
-                    {% endif %}
-
-                    <p>{{ import_summary|titled_list_to_ul }}</p>
-
-                    <p>{{ import_results|titled_list_to_ul }}</p>
-                {% else %}
-                    <p>{% trans 'Choose an excel file and click "Import file" to see here the results of the import' %}.</p>
-                {% endif %}
-            </td>
-        </tr>
-    </table>
+        {% if results %}
+            <div id="results_summary">
+                <h3>{% trans 'Resumen' %}</h3>
+                <ul>
+                    <li>Filas importadas: 100</li>
+                    <li>Filas con error: 0</li>
+                    <li>Familias creadas: 2</li>
+                </ul>
+            </div>
+            <div id="results_by_row">
+                <h3>{% trans 'Resultados por fila' %}</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Fila</th>
+                            <th>Datos excel</th>
+                            <th>Detalles</th>
+                            <th>Resultado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>
+                                <ul>
+                                    <li>Familia: Lopez Hualde, lopez.hualde@abendanoikastola.com</li>
+                                    <li>Padre: Pedro Lopez Gonzalez, pedrolopez@gmail.com, 647743503</li>
+                                    <li>Cuenta bancaria: ES20 6532 4558 2154 6532 2652</li>
+                                    <li>Hijo: Ibai</li>
+                                    <li>Asistencia: 15 días</li>
+                                </ul>
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>Familia: </li>
+                                    <li>Padre: </li>
+                                    <li>Cuenta bancaria: </li>
+                                    <li>Hijo: </li>
+                                    <li>Asistencia: </li>
+                                </ul>
+                            </td>
+                            <td>IMPORTADO</td>
+                        </tr>
+                    </tbody>
+                </table>
+        </div>
+        {% endif %}
+    </div>
 
 {% endblock %}
